<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_camerawarns_time_filter_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/transBlock"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_f4f4f4"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/tv_search_camera_warns_time_Unlimited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/Unlimited" />

        <TextView
            android:id="@+id/tv_search_camera_warns_time_24h"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/twentyfour_hours" />

        <TextView
            android:id="@+id/tv_search_camera_warns_time_3day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/three_days" />

        <TextView
            android:id="@+id/tv_search_camera_warns_time_7day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/seven_days" />

        <TextView
            android:id="@+id/tv_search_camera_warns_time_customizetime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/customize_time" />
    </LinearLayout>


</LinearLayout>