<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_camerawarns_status_filter_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentTop="true"
    android:background="@color/transBlock"
    android:gravity="center_horizontal"
    android:visibility="gone">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/c_f4f4f4"
        android:orientation="vertical"
        android:paddingTop="8dp">

        <TextView
            android:id="@+id/tv_search_camera_warns_status_unlimited"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/word_all" />

        <TextView
            android:id="@+id/tv_search_status_unprocessed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/unprocessed" />

        <TextView
            android:id="@+id/tv_search_status_effective_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/effective_warn" />

        <TextView
            android:id="@+id/tv_search_status_invalid_warn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:text="@string/invalid_warn" />


    </LinearLayout>


</LinearLayout>