<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="20dp">

    <ImageView
        android:id="@+id/iv_alarm_popup_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="-10dp"
        android:padding="10dp"
        android:src="@mipmap/ic_close" />

    <RelativeLayout
        android:id="@+id/title_rl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_alarm_popup_close"
        android:layout_marginTop="-6dp">

        <TextView
            android:id="@+id/security_warn_type_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/security_type_foreign_bg"
            android:layout_marginTop="5dp"
            android:text="外来"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/security_warn_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="费家村外来人员预警"
            android:textColor="@color/c_000000"
            android:textSize="20sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <TextView
        android:id="@+id/security_warn_time_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/title_rl"
        android:layout_marginTop="9dp"
        android:text="今天12:36"
        android:textColor="@color/c_a6a6a6"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/warn_result_type_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/security_warn_time_tv"
        android:layout_marginTop="20dp"
        android:text="@string/security_warn_result_type_title"
        android:textColor="@color/c_a6a6a6"
        android:textSize="14sp" />

    <RadioGroup
        android:id="@+id/warn_result_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/warn_result_type_tv"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/security_warn_type_invalid_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/security_warn_result_invalid_selector"
            android:button="@null"
            android:text="@string/security_warn_invalid"
            android:textColor="@color/security_warn_result_color" />

        <RadioButton
            android:id="@+id/security_warn_type_valid_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:background="@drawable/security_warn_result_valid_selector"
            android:button="@null"
            android:text="@string/security_warn_valid"
            android:textColor="@color/security_warn_result_color" />
    </RadioGroup>

    <TextView
        android:id="@+id/security_warn_des_title_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/warn_result_rg"
        android:layout_marginTop="16dp"
        android:text="@string/security_warn_des_title"
        android:textColor="@color/c_a6a6a6"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/security_warn_des_et"
        android:layout_width="wrap_content"
        android:layout_height="104dp"
        android:layout_below="@id/security_warn_des_title_tv"
        android:layout_marginTop="8dp"
        android:background="@drawable/security_warn_des_bg"
        android:gravity="top"
        android:hint="@string/security_warn_des_hint"
        android:inputType="textMultiLine"
        android:maxLength="100"
        android:paddingLeft="16dp"
        android:paddingTop="12dp"
        android:paddingRight="16dp"
        android:paddingBottom="12dp"
        android:scrollbars="vertical"
        android:textColor="@color/c_a6a6a6"
        android:textSize="14sp" />

    <Button
        android:id="@+id/security_warn_commit_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/security_warn_des_et"
        android:layout_marginTop="20dp"
        android:background="@drawable/security_warn_invalid_commit_btn_bg"
        android:clickable="true"
        android:gravity="center"
        android:text="@string/commit"
        android:textColor="@color/white"
        android:textSize="@dimen/city_btn_text_size" />

</RelativeLayout>