<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="bottom"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:padding="20dp">

    <ImageView
        android:id="@+id/iv_alarm_popup_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_gravity="end"
        android:layout_marginTop="-10dp"
        android:layout_marginEnd="-10dp"
        android:padding="10dp"
        android:src="@mipmap/ic_close" />

    <ImageView
        android:id="@+id/iv_control_person_photo"
        android:layout_width="162dp"
        android:layout_height="190dp"
        android:src="@drawable/splash"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:id="@+id/control_person_name_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_control_person_photo"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="24dp"
        android:text="@string/word_name"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/control_person_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/control_person_name_title"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/control_person_name_title"
        android:singleLine="true"
        android:text="王大鹏"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/control_person_nation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/control_person_name_title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:text="@string/word_nation"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/control_person_nation_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/control_person_nation_title"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/control_person_nation_title"
        android:singleLine="true"
        android:text="汉族"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/control_person_telephone_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/control_person_nation_title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:text="@string/word_phone"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/control_person_telephone_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/control_person_telephone_title"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@id/control_person_telephone_title"
        android:singleLine="true"
        android:text="18512345678"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/control_person_idcard_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/control_person_telephone_title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:text="@string/word_idcard"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/control_person_idcard_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/control_person_idcard_title"
        android:layout_marginLeft="24dp"
        android:layout_toRightOf="@id/control_person_idcard_title"
        android:singleLine="true"
        android:text="371425198707238765"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/control_person_describe_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/control_person_idcard_title"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="16dp"
        android:text="@string/word_describe"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/control_person_describe_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/control_person_describe_title"
        android:layout_marginLeft="40dp"
        android:layout_toRightOf="@id/control_person_describe_title"
        android:text="一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十一二三四五六七八九十"
        android:textColor="@color/c_252525"
        android:textSize="16sp" />





</RelativeLayout>