<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="277dp"
    android:layout_marginTop="12dp"
    android:background="@color/white">

    <include layout="@layout/include_camerawarn_single_photo" />

    <include layout="@layout/include_camerawarn_mult_photo" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="16dp">

        <RelativeLayout
            android:layout_toLeftOf="@+id/btn_camerawarn_confim"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_camera_warn_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@drawable/security_type_focus_bg"
                android:gravity="center"
                android:text="@string/external_type"
                android:textColor="@color/white"
                android:textSize="10sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_camera_task_name"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:layout_marginLeft="4dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/tv_camera_warn_type"
                android:text="外来人员布控任务"
                android:ellipsize="end"
                android:singleLine="true"
                android:textColor="@color/c_252525"
                android:textSize="16sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_camera_warn_device_name"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="4dp"
            android:text="费家村56号超市外"
            android:textColor="@color/c_a6a6a6"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tv_camera_warn_time"
            android:layout_width="wrap_content"
            android:layout_height="17dp"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="4dp"
            android:layout_toLeftOf="@+id/btn_camerawarn_confim"
            android:layout_toRightOf="@+id/tv_camera_warn_device_name"
            android:text="今天12:36"
            android:textColor="@color/c_a6a6a6"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_camerawarn_confim"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="8dp"
            android:background="@drawable/shape_confim_bg"
            android:gravity="center"
            android:paddingLeft="8dp"
            android:paddingTop="6dp"
            android:paddingRight="8dp"
            android:paddingBottom="6dp"
            android:text="@string/warn_confirm"
            android:textColor="@color/c_252525"
            android:textSize="12sp"
            android:textStyle="bold" />


    </RelativeLayout>

    <TextView
        android:id="@+id/tv_camerawarn_valid"
        android:layout_width="44dp"
        android:layout_height="28dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/shape_camera_warn_valid"
        android:gravity="center"
        android:text="@string/word_valid"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />


</RelativeLayout>